<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/action_most_popular"
        android:orderInCategory="1"
        android:title="@string/most_popular"
        android:icon="@drawable/ic_movie_filter_white_48px"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_top_rated"
        android:orderInCategory="1"
        android:title="@string/top_rated"
        android:icon="@drawable/ic_star_half_white_48px"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="1"
        android:title="@string/favorites"
        android:icon="@drawable/ic_favorite_white_48px"
        app:showAsAction="always" />
</menu>