<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/default_background_color"
    tools:context=".ui.fragment.MovieDetailsFragment">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:background="@color/green"
                android:layout_width="match_parent"
                android:layout_height="@dimen/details_backdrop_image_width">

                <ImageView
                    android:scaleType="centerCrop"
                    android:id="@+id/backdropImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ImageButton
                    android:visibility="gone"
                    android:layout_margin="12dp"
                    android:id="@+id/homeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:src="@mipmap/ic_launcher"
                    android:background="@color/transparent"/>

            </RelativeLayout>

            <android.support.v7.widget.CardView
                android:layout_marginBottom="@dimen/spc2"
                app:cardBackgroundColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:layout_weight="0.5">
                            <ImageView
                                android:layout_gravity="end|top"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/details_poster_image_height"
                                android:id="@+id/posterImageView"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_gravity="center_vertical"
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:layout_margin="@dimen/spc3"
                            android:gravity="center_vertical">

                            <TextView
                                android:id="@+id/titleTextView"
                                tools:text="Movie name"
                                android:textStyle="bold"
                                android:layout_margin="@dimen/spc3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/green"
                                android:textSize="@dimen/txt6"/>

                            <TextView
                                android:layout_margin="@dimen/spc3"
                                android:id="@+id/releaseDateTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/txt4"
                                android:gravity="start"/>

                            <LinearLayout
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:isIndicator="true">
                            <TextView
                                android:layout_margin="@dimen/spc3"
                                android:textSize="@dimen/txt4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/details_rate"/>
                            <ImageView
                                android:layout_width="@dimen/spc6"
                                android:layout_height="@dimen/spc6"
                                android:src="@drawable/ic_star_white_18px"
                                android:tint="@color/golden"/>
                            <TextView
                                android:layout_margin="@dimen/spc3"
                                android:textSize="@dimen/txt4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/rateTextView"/>
                        </LinearLayout>

                            <Button
                                android:layout_margin="@dimen/spc3"
                                android:id="@+id/favoriteButton"
                                style="@style/Button"
                                android:text="@string/add_to_favorites"
                                android:background="@drawable/button_green"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/overviewTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/spc6"
                        android:textSize="@dimen/txt4" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    app:cardBackgroundColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:padding="@dimen/spc5"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/details_trailers"
                            android:textColor="@color/green"
                            android:textSize="@dimen/txt5"/>
                    </FrameLayout>
                </android.support.v7.widget.CardView>

                <ProgressBar
                    android:visibility="gone"
                    android:layout_margin="@dimen/spc6"
                    android:id="@+id/loadingTrailersProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_margin="@dimen/spc6"
                    android:id="@+id/noTrailersTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/details_no_trailers_available"
                    android:visibility="visible" />

                <android.support.v7.widget.RecyclerView
                    android:visibility="gone"
                    android:id="@+id/trailersRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    app:cardBackgroundColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:padding="@dimen/spc5"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/details_reviews"
                            android:textColor="@color/green"
                            android:textSize="@dimen/txt5"/>
                    </FrameLayout>
                </android.support.v7.widget.CardView>

                <ProgressBar
                    android:layout_margin="@dimen/spc6"
                    android:visibility="gone"
                    android:id="@+id/loadingReviewsProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_margin="@dimen/spc6"
                    android:id="@+id/noReviewsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/details_no_reviews_available"
                    android:visibility="visible" />

                <android.support.v7.widget.RecyclerView
                    android:visibility="gone"
                    android:id="@+id/reviewsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spc3"/>

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</ScrollView>
